alignment fixed

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -7,6 +7,8 @@
   color: $dark-blue-text;
   padding: 2rem 5.6rem!important;
   margin-bottom: 0;
+  display: flex;
+  align-items: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   padding-bottom: 10%;
